# bachelors_thesis

./: .clang-format  CMakeLists.txt  README.md
.github/docker/: Dockerfile.ubuntu
.github/workflows/: build.yml
client/: CMakeLists.txt  client.c  prot.h
server/: CMakeLists.txt  config.h  speed_limit.h  thesis.bpf.c  thesis.c  thesis.h
src/: CMakeLists.txt  config.h  thesis.bpf.c  thesis.c  thesis.h  xdp_dropall.bpf.c  xdp_dropall.c
test/: run_repeated_remote.sh  run_until_fail.sh
test/run_once/: run_once.sh
test/run_repeated/: run_client_repeated.sh  run_repeated.sh
test/run_until_fail/: run_until_fail.sh
